manifests/test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gearpit-skeleton
  labels:
    app: gearpit-skeleton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gearpit-skeleton
  template:
    metadata:
      labels:
        app: gearpit-skeleton
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: app
          image: ghcr.io/nordiwnd/gearpit-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: gearpit-skeleton-svc
spec:
  selector:
    app: gearpit-skeleton
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
